# engths2013

./: jack.mtx  win7.mtx
artykuly/: Johnson - Numerical Solutions Of Partial Differential Equations By The Finite Element Method.djvu  Thumbs.db
praca/: DP.xlsx  Thumbs.db  abstrakt_sesjakol.docx  abstrakt_sesjakol_lr.docx  analiza.docx  analiza.xlsx  analiza_final.docx  analiza_pre.docx  analiza_recenzja.docx  macierze.txt  nowetesty.txt  przykladowa praca.docx  roofline.xlsx  roofline2.xlsx  spis tresci.docx  spotkanie_praktyka.docx  uwagi luzne jack.txt
praca/prezentacja/: prezentacja_dluga.odp  prezentacja_konspekt.docx  prezentacja_obrona.ppt  prezentacja_sesja.aux  prezentacja_sesja.nav  prezentacja_sesja.out  prezentacja_sesja.tex  prezentacja_sesja.toc  sesja_handout.aux  sesja_handout.nav  sesja_handout.out  sesja_handout.tex  sesja_handout.toc
praca/testy/: gt550ti_series1.txt  gt550ti_series2.txt  gt550ti_series3.txt  gt550ti_series4.txt  gt550ti_series5.txt  i52400_series1.txt  i52400_series2.txt  i52400_series3.txt  i52400_series4.txt  i52400_series5.txt  intel_128.txt  intel_basic.txt  log.txt  mic_series1.txt  mic_series2.txt  mic_series3.txt  mic_series4.txt  mic_series5.txt  nierowne.txt  series2.txt  tesla_256.txt  tesla_basic.txt  tesla_last.txt  uwagi luzne jack.txt  xeon_series1.txt  xeon_series2.txt  xeon_series3.txt  xeon_series4.txt  xeon_series5.txt
slajdy/: all_frames_uncut.xcf  introduction.7z  pres.pptx  slides_no_comment.odp  solver_docs.ods  solver_docs.xls  solver_docs.xls.ods
slajdy/introduction/: introduction_en.odp  introduction_pl.odp  matrixExamples_color.ods
soft/: .gitignore  CMakeLists.txt  Doxyfile.in  FindOpenCL.cmake  mk.sh  new  2.txt
soft/mtx/: 1000.mtx  2048.mtx  3200.mtx  4800.mtx  512.mtx  diag_100000x100000_0.1.mm  diag_10000x10000_0.1.mm  diag_50000x50000_0.1.mm  e05r0000.mtx  e05r0000_rhs1.mtx  fidap005.mtx  fidap005_rhs1.mtx  sherman1.mtx  sherman1_rhs1.mtx
soft/src/: flatmatrix.h  gpusolver.h  oclbackend.h  oclvector.h  shortmatrix.h  simplekernels.cl  slicing_mtx.h  slicingvector.h  twokernels.cl  util.h
soft/src/tests/: builtinkernelcompile.cpp  mtx_loader.cpp  openclsanity.cpp  shortmatrixsanity.cpp  solution.cpp
